# patchdeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LOCAL_API.md  README.md  eslint.config.js  package-lock.json  package.json  settings-redesign-preview.html  tailwind.config.ts
.github/: dependabot.yml  issue_reply_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  (+6 more)
client/: index.html
docs/: index.html  native-app-framework-evaluation.md
script/: build-public-docs.ts  prune-state.ts  screenshot.mjs
server/: agentRunner.test.ts  agentRunner.ts  agentSettings.ts  appBranding.test.ts  appRuntime.test.ts  appRuntime.ts  appUpdate.test.ts  appUpdate.ts  babysitter.test.ts  babysitter.ts  backgroundJobDispatcher.test.ts  backgroundJobDispatcher.ts  backgroundJobHandlers.test.ts  backgroundJobHandlers.ts  backgroundJobQueue.ts  ciHealingManager.test.ts  ciHealingManager.ts  cli.test.ts  cli.ts  defaultConfig.test.ts  defaultConfig.ts  deploymentHealingAgent.ts  github.test.ts  github.ts  githubReplyBranding.test.ts  index.ts  instanceLock.test.ts  instanceLock.ts  issueDecompose.test.ts  issueDecompose.ts  issueEvaluator.test.ts  issueEvaluator.ts  issueFormatter.test.ts  issueFormatter.ts  issueVerify.ts  issueWorkAgent.test.ts  issueWorkAgent.ts  localOnly.ts  logger.test.ts  logger.ts  (+29 more)
shared/: models.ts  prWorkContract.ts  schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
(+93 files in other folders)
